<resources>
    <string name="app_name">BeeDip</string>
    <string name="app_label_name">BeeDip</string>
    <string name="title_map">Map</string>
    <string name="title_compass">Compass</string>
    <string name="title_manager">Project</string>
    <string name="location_access_rational_title">Use <font color='#DD000000'>BeeDip</font> location services</string>
    <string name="location_access_rational_message">BeeDip allows you to view and zoom to your current location</string>
    <string name="storage_access_rational_title">Use <font color='#DD000000'>BeeDip</font> storage services</string>
    <string name="storage_access_rational_message">BeeDip allows you to read from and write to GeoPackages in external storage</string>
    <string name="external_geopackage_access_title"><font color='#DD000000'>Storage Permission Denied</font></string>
    <string name="external_geopackage_access_message"><font color='#DD000000'>BeeDip</font> has been denied access to external storage. Please enable if you would like to access the GeoPackages that reside in external storage.</string>
    <string name="external_export_geopackage_access_title"><font color='#DD000000'>Storage Permission Denied</font></string>
    <string name="external_export_geopackage_access_message"><font color='#DD000000'>BeeDip</font> has been denied access to external storage. Please enable if you would like to export a GeoPackage to external storage.</string>
    <string name="external_import_geopackage_access_title"><font color='#DD000000'>Storage Permission Denied</font></string>
    <string name="external_import_geopackage_access_message"><font color='#DD000000'>MapCache</font> has been denied access to external storage. Please enable if you would like to import an externally linked GeoPackage.</string>
    <string name="settings">Settings</string>
    <string name="import_geopackage_url">Import URL</string>
    <string name="import_geopackage_file">Import File</string>
    <string name="create_geopackage">Create</string>
    <string name="clear_selected_tables">remove selected db</string>
    <string name="map_zoom">Zoom to Active</string>
    <string name="map_features">Features</string>
    <string name="map_bounding_box">Bounding Box</string>
    <string name="map_download_tiles">Download Tiles</string>
    <string name="map_feature_tiles">Feature Tiles</string>
    <string name="map_clear_bounding_box">Clear Bounding Box</string>
    <string name="map_edit_point">Points</string>
    <string name="map_edit_linestring">Linestrings</string>
    <string name="map_edit_polygon">Polygons</string>
    <string name="map_edit_accept">Accept</string>
    <string name="map_edit_clear">Clear</string>
    <string name="map_edit_polygon_hole">Polygon Holes</string>
    <string name="map_edit_polygon_hole_accept">Accept</string>
    <string name="map_edit_polygon_hole_clear">Clear</string>
    <string name="map_max_features">Max Features</string>
    <string name="map_max_features_message">Set the max number of features to draw on the map</string>
    <string name="map_type_normal">Normal</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_type_terrain">Terrain</string>
    <string name="map_type_hybrid">Hybrid</string>
    <string name="import_url_name_label">Name: </string>
    <string name="import_url_label">URL: </string>
    <string name="import_url_preloaded_label">Preloaded</string>
    <string name="import_file_name_label">Name: </string>
    <string name="import_file_copy_label">Copy</string>
    <string name="import_file_external_label">External Link</string>
    <string name="create_tiles_name_label">Name: </string>
    <string name="load_tiles_url_label">URL: </string>
    <string name="load_tiles_preloaded_label">Preloaded URLs</string>
    <string name="generate_tiles_zoom_label">Zoom - </string>
    <string name="generate_tiles_min_zoom_label">Min: </string>
    <string name="generate_tiles_max_zoom_label">Max: </string>
    <string name="generate_tiles_max_features_label">Max Features Per Tile: </string>
    <string name="generate_tiles_compress_format_label">Compress Format: </string>
    <string name="generate_tiles_compress_format_prompt">Compress Format</string>
    <string name="generate_tiles_compress_quality_label">Compress Quality: </string>
    <string name="generate_tiles_type_label">Tile Format:</string>
    <string name="generate_tiles_type_geopackage_label">GeoPackage</string>
    <string name="generate_tiles_type_google_label">Google</string>
    <string name="feature_tiles_index_warning">WARNING: Table is not indexed!</string>
    <string name="feature_tiles_name_label">Name: </string>
    <string name="feature_tiles_name_suffix">_tiles</string>
    <string name="feature_overlay_tiles_name_suffix">_overlay</string>
    <string name="feature_tiles_draw_point_label">Points - </string>
    <string name="feature_tiles_draw_point_color_label">Color: </string>
    <string name="feature_tiles_draw_point_alpha_label">Alpha: </string>
    <string name="feature_tiles_draw_point_radius_label">Radius: </string>
    <string name="feature_tiles_draw_line_label">Lines - </string>
    <string name="feature_tiles_draw_line_color_label">Color: </string>
    <string name="feature_tiles_draw_line_alpha_label">Alpha: </string>
    <string name="feature_tiles_draw_line_stroke_label">Stroke: </string>
    <string name="feature_tiles_draw_polygon_label">Polygons - </string>
    <string name="feature_tiles_draw_polygon_color_label">Color: </string>
    <string name="feature_tiles_draw_polygon_alpha_label">Alpha: </string>
    <string name="feature_tiles_draw_polygon_stroke_label">Stroke: </string>
    <string name="feature_tiles_draw_polygon_fill_label">Fill?</string>
    <string name="feature_tiles_draw_polygon_fill_color_label">Fill Color: </string>
    <string name="feature_tiles_draw_polygon_fill_alpha_label">Fill Alpha: </string>
    <string name="map_create_tiles_geopackage_label">GeoPackage: </string>
    <string name="map_create_tiles_existing_geopackage_label">Existing</string>
    <string name="map_create_tiles_existing_geopackage_dialog_label">GeoPackages</string>
    <string name="create_features_name_label">Name: </string>
    <string name="create_feature_overlay_name_label">Name: </string>
    <string name="edit_feature_overlay_index_warning">WARNING: Table is not indexed!</string>
    <string name="edit_feature_overlay_zoom_label">Zoom - </string>
    <string name="edit_feature_overlay_min_zoom_label">Min: </string>
    <string name="edit_feature_overlay_max_zoom_label">Max: </string>
    <string name="edit_feature_overlay_max_features_label">Max Features Per Tile: </string>
    <string name="bounding_box_min_latitude_label">Min Lat: </string>
    <string name="bounding_box_max_latitude_label">Max Lat: </string>
    <string name="bounding_box_default_min_latitude">-90.0</string>
    <string name="bounding_box_default_max_latitude">90.0</string>
    <string name="bounding_box_min_longitude_label">Min Lon: </string>
    <string name="bounding_box_max_longitude_label">Max Lon: </string>
    <string name="bounding_box_default_min_longitude">-180.0</string>
    <string name="bounding_box_default_max_longitude">180.0</string>
    <string name="bounding_box_preloaded_label">Preloaded Locations</string>
    <string name="geopackage_view_label">View</string>
    <string name="geopackage_delete_label">Delete</string>
    <string name="geopackage_rename_label">Rename</string>
    <string name="geopackage_copy_label">Copy</string>
    <string name="geopackage_copy_suffix">_copy</string>
    <string name="geopackage_export_label">Export</string>
    <string name="geopackage_share_label">Share</string>
    <string name="geopackage_share_copy_message">Preparing internal GeoPackage for sharing</string>
    <string name="geopackage_import_label">Import</string>
    <string name="geopackage_create_label">Create</string>
    <string name="geopackage_create_features_label">Create Features</string>
    <string name="geopackage_create_tiles_label">Create Tiles</string>
    <string name="table_image_description">Table Type</string>
    <string name="geopackage_table_view_label">View</string>
    <string name="geopackage_table_edit_label">Edit</string>
    <string name="geopackage_table_delete_label">Delete</string>
    <string name="geopackage_table_tiles_load_label">Load Tiles</string>
    <string name="geopackage_table_create_feature_tiles_label">Create Tiles</string>
    <string name="geopackage_table_add_feature_overlay_label">Add Tile Overlay</string>
    <string name="geopackage_table_link_label">Linked Tables</string>
    <string name="geopackage_table_link_features_list_title">Linked Feature Tables</string>
    <string name="geopackage_table_link_tiles_list_title">Linked Tile Tables</string>
    <string name="geopackage_table_edit_feature_overlay_label">Edit Tile Overlay</string>
    <string name="geopackage_table_index_features_label">Feature Index</string>
    <string name="geopackage_table_index_features_index_title">Index</string>
    <string name="geopackage_table_index_features_index_geopackage_label">GeoPackage Index</string>
    <string name="geopackage_table_index_features_index_metadata_label">Metadata Index</string>
    <string name="geopackage_table_index_features_index_create_label">Create</string>
    <string name="geopackage_table_index_features_index_delete_label">Delete</string>
    <string name="geopackage_table_index_features_index_create_geopackage_label">into the GeoPackage?</string>
    <string name="geopackage_table_index_features_index_create_metadata_label">into App Metadata?</string>
    <string name="geopackage_table_index_features_index_delete_geopackage_label">from the GeoPackage?</string>
    <string name="geopackage_table_index_features_index_delete_metadata_label">from App Metadata?</string>
    <string name="edit_contents_identifier_label">Identifier: </string>
    <string name="edit_contents_description_label">Description: </string>
    <string name="edit_contents_min_y_label">Min Y: </string>
    <string name="edit_contents_max_y_label">Max Y: </string>
    <string name="edit_contents_min_x_label">Min X: </string>
    <string name="edit_contents_max_x_label">Max X: </string>
    <string name="edit_tiles_label">Tile Matrix Set:</string>
    <string name="edit_tiles_min_y_label">Min Y: </string>
    <string name="edit_tiles_max_y_label">Max Y: </string>
    <string name="edit_tiles_min_x_label">Min X: </string>
    <string name="edit_tiles_max_x_label">Max X: </string>
    <string name="edit_features_z_label">Z: </string>
    <string name="edit_features_m_label">M: </string>
    <string name="edit_features_geometry_type_label">Geometry Type: </string>
    <string name="edit_features_geometry_type_prompt">Geometry Type</string>
    <string name="edit_features_selection_geopackage_label">GeoPackage: </string>
    <string name="edit_features_selection_geopackage_prompt">GeoPackage</string>
    <string name="edit_features_selection_features_label">Features: </string>
    <string name="edit_features_selection_features_prompt">Features</string>
    <string name="edit_features_save_label">Save</string>
    <string name="edit_features_info_label">Info</string>
    <string name="edit_features_edit_label">Edit</string>
    <string name="edit_features_delete_label">Delete</string>
    <string name="edit_features_clear_validation_label">Unsaved Edits</string>
    <string name="edit_features_clear_validation_message">All unsaved feature edits will be lost</string>
    <string name="edit_features_shape_point_delete_label">Delete</string>
    <string name="locality">Locality</string>
    <string name="rock_unit">Rock Unit</string>
    <string name="type">Type</string>
    <string name="accuracy">Accuracy</string>
    <string name="save">Save</string>
    <string name="note">Note</string>
    <string name="surveyor">Surveyor</string>
</resources>