<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/testo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Valori misurati"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/rockUnit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/rock_unit"
        android:layout_below="@+id/surveyor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/surveyor"
        android:layout_alignEnd="@+id/surveyor" />

    <Button
        android:id="@+id/locality"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/locality"
        android:layout_below="@+id/testo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/title"
        android:layout_toEndOf="@+id/title" />
    <Button
        android:id="@+id/type"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:layout_alignBaseline="@+id/accuracy"
        android:layout_alignBottom="@+id/accuracy"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/note"
        android:layout_alignStart="@+id/note" />
    <Button
        android:id="@+id/accuracy"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/accuracy"
        android:layout_below="@+id/rockUnit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/rockUnit"
        android:layout_alignEnd="@+id/rockUnit" />

    <Button
        android:id="@+id/note"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:layout_alignBaseline="@+id/rockUnit"
        android:layout_alignBottom="@+id/rockUnit"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/locality"
        android:layout_alignStart="@+id/locality" />

    <Button
        android:id="@+id/save"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_below="@+id/accuracy"
        android:layout_alignLeft="@+id/bigClockface"
        android:layout_alignStart="@+id/bigClockface"
        android:layout_marginTop="13dp"
        android:layout_toLeftOf="@+id/littleClockface"
        android:layout_toStartOf="@+id/littleClockface" />

    <Button
        android:id="@+id/surveyor"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/surveyor"
        android:layout_below="@+id/testo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/title"
        android:layout_toStartOf="@+id/title" />

    <ImageButton
        android:id="@+id/bigClockface"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/cfacetwo"
        android:layout_marginTop="36dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:id="@+id/littleClockface"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:scaleType="fitCenter"
        android:src="@drawable/cfacetwo"
        android:background="@null"
        android:layout_alignBottom="@+id/bigClockface"
        android:layout_toRightOf="@+id/bigClockface"
        android:layout_toEndOf="@+id/bigClockface" />

    <ImageView
        android:id="@+id/littleIndicator"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:scaleType="fitCenter"
        android:src="@drawable/arrow"
        android:layout_alignBottom="@+id/littleClockface"
        android:layout_toRightOf="@+id/bigClockface"
        android:layout_alignTop="@+id/littleClockface"
        android:layout_alignRight="@+id/littleClockface"
        android:layout_alignEnd="@+id/littleClockface" />

    <ImageView
        android:id="@+id/bigIndicator"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:src="@drawable/mid"
        android:scaleType="fitCenter"
        android:layout_above="@+id/littleIndicator"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="  Value:"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>